--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <head>
   
-<meta http-equiv="Refresh" content="0;url=https://kamillusearch.blogspot.com/">
+<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/">
 </head>
