--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <head>
   
-<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/">
+<!--<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/">-->
+  
+  <center>
+<a href="https://www.facebook.com/dialog/pagetab?app_id=221165111427900&amp;next=https://apps.facebook.com/kamillustore" target="_blank">
+<span style="font-size: small;">Agregar a Mi Página de Facebook</span></a></center>
 </head>
