--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <!--<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/">-->
   
   <center>
-<a href="https://www.facebook.com/dialog/pagetab?app_id=221165111427900&amp;next=https://apps.facebook.com/kamillustore" target="_blank">
+<a href="https://www.facebook.com/dialog/pagetab?app_id=1807055632928492&amp;next=https://apps.facebook.com/bestpriceschile" target="_blank">
 <span style="font-size: small;">Agregar a Mi Página de Facebook</span></a></center>
 </head>
