--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   
-<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/">
+<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/?m=1">
   
   <!--<center>
 <a href="https://www.facebook.com/dialog/pagetab?app_id=1807055632928492&amp;next=https://apps.facebook.com/bestpriceschile" target="_blank">
