--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
   
-<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/?m=1">
+  <!--<meta http-equiv="Refresh" content="0;url=https://bestpriceschile.blogspot.com/?m=1">-->
   
-  <!--<center>
+<center>
 <a href="https://www.facebook.com/dialog/pagetab?app_id=1807055632928492&amp;next=https://apps.facebook.com/bestpriceschile" target="_blank">
-<span style="font-size: small;">Agregar a Mi Página de Facebook</span></a></center>-->
+<span style="font-size: small;">Agregar a Mi Página de Facebook</span></a></center>
 </head>
